<resources>
    <string name="ok">确认</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="pass">成功</string>
    <string name="fail">失败</string>
    <string name="cancel">取消</string>
    <string name="testing">正在测试...</string>
    <string name="initialize">正在初始化...</string>
    <string name="app_name">工厂测试</string>
    <string name="start">开始</string>
    <string name="scan">扫描</string>
    <string name="device_open_fail">设备打开失败!</string>
    <string name="service_get_fail">服务获取失败!</string>
    <string name="sensor_get_fail">传感器获取失败!</string>
    <string name="sensor_register_fail">传感器注册失败!</string>
    <string name="test_pass">测试通过</string>
    <string name="scanning">扫描中...</string>
    <string name="enabling">正在启用...</string>
    <string name="disabling">正在禁用...</string>
    <string name="turning_on">打开...</string>
    <string name="turning_off">关闭...</string>
    <string name="off">关闭</string>
    <string name="shake_hint">请用手覆盖光感应传感器至少2次。</string>
    <string name="remove_headset">请移除耳机</string>
    <string name="insert_headset">请插入耳机</string>
    <string name="stop">停止</string>
    <string name="play">播放</string>
    <string name="record">录音</string>
    <string name="time_out">超时!</string>
    <string name="back_prompt">请再次点击返回按键以退出</string>
    <string name="clean_state">清除标记</string>
    <string name="uninstall">卸载</string>
    <string name="control_center_quit_confirm">请确认是否退出?</string>
    <string name="led_name">指示灯</string>
    <string name="led_tri_text">指示灯依次亮起:红,黄,熄灭</string>
    <string name="led_dual_text">指示灯依次亮起:红,黄,熄灭</string>
    <string name="led_confirm">指示灯显示正确吗?</string>
    <string name="flashlight_name">闪光灯</string>
    <string name="flashlight_confirm">闪光灯打开了吗?</string>
    <string name="keypadbacklight_name">KeypadBacklight</string>
    <string name="keypadbacklight_confirm">Is the KeypadBacklight on?</string>
    <string name="sim1_name">SIM1</string>
    <string name="sim_status_absent">无卡</string>
    <string name="sim_status_unknown">已插入，未知状态</string>
    <string name="sim_status_network_locked">已插入，需要NetworkPIN解锁</string>
    <string name="sim_status_pin_required">已插入，需要PIN解锁</string>
    <string name="sim_status_puk_required">已插入，需要PUK解锁</string>
    <string name="sim_status_ready">已插入，状态良好</string>
    <string name="sim_status">SIM卡状态： </string>
    <string name="sim_iccid">SIM卡ICCID： </string>
    <string name="sim_operator_code">移动国家码和网络码: </string>
    <string name="status_unknown">未知</string>
    <string name="sim2_name">SIM2</string>
    <string name="sim_not_existed">无SIM卡</string>
    <string name="touchpanel_edge_name">触摸屏边缘</string>
    <string name="touchpanel_key_name">触摸屏按键</string>
    <string name="keypad_name">按键</string>
    <string name="keypad_text">请按下下面的按键:</string>
    <string name="keypad_volume_up">音量上</string>
    <string name="keypad_volume_down">音量下</string>
    <string name="keypad_focus">FOCUS</string>
    <string name="keypad_camera">相机</string>
    <string name="keypad_power">电源</string>
    <string name="keypad_menu">菜单</string>
    <string name="keypad_home">HOME</string>
    <string name="keypad_back">返回</string>
    <string name="keypad_record">录音</string>
    <string name="keypad_ptt">PTT</string>
    <string name="keypad_video">录像</string>
    <string name="keypad_mark">标记</string>
    <string name="keypad_sos">SOS</string>
    <string name="cameraback_name">后置摄像头</string>
    <string name="cameraback_takepicture">拍照</string>
    <string name="cameraback_fail_open">相机打开失败，请确认!</string>
    <string name="autofocus_fail">自动对焦失败</string>
    <string name="cameraback_cameratocode">请将后摄对准二维码</string>
    <string name="cameraback_codeconfirm">已识别到二维码</string>
    <string name="camerafront_name">前置摄像头</string>
    <string name="camerafront_takepicture">拍照</string>
    <string name="camerafront_cameratocode">请将前摄对准二维码</string>
    <string name="lcm_name">LCM</string>
    <string name="lcm_confirm">请确认结果</string>
    <string name="vibrate_name">振动</string>
    <string name="vibrate_confirm">请确认结果</string>
    <string name="vibrate_hint">振动中...</string>
    <string name="psensor_name">距离感应</string>
    <string name="psensor_title">请遵照指示，每一步都必须7秒内完成</string>
    <string name="psensor_to_cover">覆盖传感器大于1秒</string>
    <string name="psensor_to_uncover">不覆盖传感器超过1s</string>
    <string name="psensor_uncovered">未覆盖</string>
    <string name="psensor_covered">被覆盖</string>
    <string name="psensor_verifying">检验中...</string>
    <string name="psensor_sensor_unstable_fail">传感器不稳定!</string>
    <string name="gsensor_name">重力感应</string>
    <string name="gsensor_tips">竖立,平放,侧立,观察重力变化!</string>
    <string name="msensor_name">磁力感应</string>
    <string name="msensor_south">正南</string>
    <string name="msensor_west">正西</string>
    <string name="msensor_east">正东</string>
    <string name="msensor_north">正北</string>
    <string name="msensor_southwest">西南</string>
    <string name="msensor_northwest">西北</string>
    <string name="msensor_northeast">东北</string>
    <string name="msensor_southeast">东南</string>
    <string name="msensor_degree">°</string>
    <string name="gyroscope_name">陀螺仪</string>
    <string name="lightsensor_name">光感应</string>
    <string name="lightsensor_summary">光线强度：</string>
    <string name="lightsensor_tips">请分别在明暗环境下查看光感指数</string>
    <string name="sdcard_name">SD卡</string>
    <string name="sdcard_inter_tips">已检测到内部SD卡:</string>
    <string name="sdcard_external_tips">已检测到外部SD卡:</string>
    <string name="sdcard_usage">空间使用量: </string>
    <string name="sdcard_unmounted">sd卡未装载!</string>
    <string name="sdcard_confirm">插入SD卡了吗?</string>
    <string name="sdcard_to_insert">请插入sd卡</string>
    <string name="bluetooth_name">Bluetooth</string>
    <string name="bluetooth_scan_start">扫描设备中...</string>
    <string name="bluetooth_scan_finish">完成扫描</string>
    <string name="bluetooth_turning_on">打开蓝牙...</string>
    <string name="bluetooth_scan_null">未发现设备</string>
    <string name="wifi_name">WiFi</string>
    <string name="wifi_text">WIFI启动扫描，测试在30秒内结束，请稍候。</string>
    <string name="wifi_scan_failed">扫描失败!</string>
    <string name="wifi_is_closing">WiFi正在关闭，即将重启扫描，请稍等片刻。</string>
    <string name="wifi_scan_null">没有发现AP! 即将重启扫描，请稍等片刻。</string>
    <string name="wifi_state_unknown">WiFi状态不对，请重试。</string>
    <string name="wifi_scan_find_ap">"发现AP, AP列表：\n"</string>
    <string name="handsetloopback_name">麦克风</string>
    <string name="handsetloopback_start_record">开始录音</string>
    <string name="handsetloopback_volume">音量</string>
    <string name="handsetloopback_click_start">点击开始录音测试</string>
    <string name="handsetloopback_stop_to_play">停止录音并播放</string>
    <string name="handsetloopback_recording">录音中...</string>
    <string name="handsetloopback_playing">播放中...</string>
    <string name="handsetloopback_record_again">播放结束，点击开始录音可以继续测试</string>
    <string name="handset_name">Handset</string>
    <string name="handset_hint">Handset audio loopback testing...</string>
    <string name="handset_loopback">Handset audio loopback testing...</string>
    <string name="handset_playing">Replaying now, please listen to the receiver.</string>
    <string name="handset_confirm">Do you hear the sound?</string>
    <string name="handset_record_first">Please click Record button first</string>
    <string name="handset_replay_end">Have reached the end.</string>
    <string name="handset_to_record">Click Record button to record sound.</string>
    <string name="handset_recording">Now recording, please say some words to mic and
        click Stop button to stop.</string>
    <string name="headset_name">Headset</string>
    <string name="headset_hint">Headset</string>
    <string name="headset_recording">Now recording, please say some words to mic and
        click Stop button to stop.</string>
    <string name="headset_playing">Replaying now, please listen to the receiver.</string>
    <string name="headset_confirm">Do you hear the sound?</string>
    <string name="headset_record_first">Please click Record button first</string>
    <string name="headset_replay_end">Have reached the end.</string>
    <string name="headset_to_record">Click Record button to record sound.</string>
    <string name="speaker_name">扬声器</string>
    <string name="speaker_hint">你听到音乐播放了吗?</string>
    <string name="speaker_confirm">你听到声音了吗?</string>
    <string name="speaker_playing">正在播放...</string>
    <string name="speaker_play_first">请点击播放按钮</string>
    <string name="speaker_to_play">点击播放按钮开始播放</string>
    <string name="speaker_recording">正在录音，请说话</string>
    <string name="gps_name">GPS</string>
    <string name="gps_enable_first">请先打开GPS</string>
    <string name="fm_name">FmRadio</string>
    <string name="fm_search">Search</string>
    <string name="fm_confirm">Can you hear the sound ?</string>
    <string name="battery_name">电池</string>
    <string name="battery_info_status_label">充电状态: </string>
    <string name="battery_info_scale_label">电池电量: </string>
    <string name="battery_info_level_label">当前电量: </string>
    <string name="battery_info_health_label">电源状况: </string>
    <string name="battery_info_technology_label">电源技术: </string>
    <string name="battery_info_voltage_label">当前电压: </string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">电源温度: </string>
    <string name="battery_info_current_label">电池电流: </string>
    <string name="battery_info_average_current_label">电池端平均电流:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">自启动的时间: </string>
    <string name="battery_info_awake_battery">对电池唤醒时间:</string>
    <string name="battery_info_awake_plugged">充电时间:</string>
    <string name="battery_info_screen_on">屏幕打开时间:</string>
    <string name="battery_info_status_unknown">未知</string>
    <string name="battery_info_status_charging">充电</string>
    <string name="battery_info_status_charging_ac">(适配器)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">放电</string>
    <string name="battery_info_status_not_charging">未充电</string>
    <string name="battery_info_status_full">已充满</string>
    <string name="battery_info_health_unknown">未知</string>
    <string name="battery_info_health_good">很好</string>
    <string name="battery_info_health_overheat">过热</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">电压过高</string>
    <string name="battery_info_health_unspecified_failure">未知错误</string>
    <string name="battery_info_temperature_c">℃</string>
    <string name="fuelgauge_name">FuelGaulge Calibration</string>
    <string name="fuelgauge_hint">FuelGauge Calibration will be completed within 30s,
        please wait...</string>
    <string name="fuelgauge_processing">Processing...</string>
    <string name="nfc_name">NFC</string>
    <string name="nfc_not_available">NFC不可用</string>
    <string name="nfc_enable_first">打开NFC...</string>
    <string name="nfc_enable_fail">无法打开NFC</string>
    <string name="nfc_scanning">NFC已打开，正在扫描中，请将NFC标签靠近设备背面</string>
    <string name="nfc_tag">NFC已打开，正在扫描中，请将NFC标签靠近设备背面\n已检测到NFC设备，标签内容：</string>
    <string name="aging_name">老化测试</string>
    <string name="auto_test_name">整机测试</string>
    <string name="quick_test_name">快速测试</string>
    <string name="factory_reset_text">恢复出厂</string>
    <string name="TestReport_name">测试报告</string>
    <string name="agingtest_lcd_cb">"LCD"</string>
    <string name="agingtest_spk_cb">"喇叭"</string>
    <string name="agingtest_vbr_cb">"震动"</string>
    <string name="agingtest_inf_cb">"红外灯"</string>
    <string name="agingtest_fls_cb">"闪光灯"</string>
    <string name="agingtest_start_bt">"老化测试"</string>
    <string name="warning_tips">警告:本机尚未通过完整测试!</string>
    <string name="ircut_confirm">点击按钮画面是否有变化，是否听到切换声音？</string>
</resources>