<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2011-2014, Qualcomm Technologies, Inc. All Rights Reserved.
  Qualcomm Technologies Proprietary and Confidential.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/shake_hint"
        android:visibility="gone"/>
    <Button
        android:id="@+id/lightsensor_cancel"
        android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:text="@string/cancel"
        android:visibility="gone" />
    <TextView
        android:id="@+id/lightsensor_result"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lightsensor_summary"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <TextView
        android:id="@+id/lightsensor_als"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/lightsensor_tips"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:textSize="15sp"
        android:textColor="@color/green"
        android:text="@string/lightsensor_tips"/>
</LinearLayout>