<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- wmd -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <Button
                android:id="@+id/againg_test"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/aging_name"
                android:lines="2"
                android:gravity="center" />

            <Button
                android:id="@+id/auto_test"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/auto_test_name"
                android:lines="2"
                android:gravity="center" />

            <Button
                android:id="@+id/quick_test"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/quick_test_name"
                android:lines="2"
                android:gravity="center" />

            <Button
                android:id="@+id/factory_reset"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/factory_reset_text"
                android:lines="2"
                android:gravity="center" />

            <Button
                android:id="@+id/test_report"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/TestReport_name"
                android:lines="2"
                android:gravity="center" />

            <Button
                android:id="@+id/auto_test_reset"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/clean_state"
                android:lines="2"
                android:gravity="center" />
        </LinearLayout>

            <TextView
                android:id="@+id/warning_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning_tips"
                android:textColor="@color/red"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"/>


        <GridView
            android:id="@+id/main_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:horizontalSpacing="2dp"
            android:numColumns="3"
            android:padding="10dp"
            android:stretchMode="columnWidth"
            android:verticalSpacing="7dp"
            android:fadeScrollbars="false"/>
        <!--
            android:numColumns="auto_fit"
            android:columnWidth="60dp"
        -->
    </LinearLayout>

    <TextView
        android:id="@+id/version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:gravity="center"
        android:layout_gravity="bottom|right"
        android:textAppearance="?android:attr/textAppearanceSmall"  />

</FrameLayout>