<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2011-2014, Qualcomm Technologies, Inc. All Rights Reserved.
  Qualcomm Technologies Proprietary and Confidential.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal">
    <SurfaceView
        android:id="@+id/mSurfaceView"
        android:visibility="visible"
        android:layout_width="fill_parent"
        android:layout_height="230dp"
        android:layout_marginTop="0dp"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:id="@+id/ircut_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ircut_confirm"
        android:textSize="18sp"
        android:textColor="#000"/>
    <Button
        android:id="@+id/ircut_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#000"
        android:text="切换滤光片开关"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/pass"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/pass"
            android:textAppearance="?android:attr/textAppearanceLarge" >
        </Button>

        <Button
            android:id="@+id/fail"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/fail"
            android:textAppearance="?android:attr/textAppearanceLarge" >
        </Button>
    </LinearLayout>
</LinearLayout>